tdf#148740 draw expanders instead of using icons

and then the color of the expander can simply follow the text color
to get contrast for the selected entry case.

At some point someone thought it would be a good idea to expose via
uno the possibility to set custom expand/collapse icons so retain
that support.

Change-Id: I44c40bf691cae228e184e58ed848001aaa4b4996